# Vorlage

./: README.md
client/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/components/: ErrorBoundary.tsx
client/src/components/auth/: RequireAuth.tsx
client/src/components/canvas/: ArchitectureNode.tsx  Canvas.tsx  CanvasLibrary.tsx
client/src/components/layout/: Footer.tsx  Header.tsx
client/src/components/sections/: FAQ.tsx  Features.tsx  Hero.tsx  LiveMockup.tsx  Performance.tsx  Testimonials.tsx  UseCases.tsx
client/src/components/ui/: CmdKModal.tsx  CustomCursor.tsx  (+4 more)
client/src/hooks/: useVoiceSession.ts
client/src/lib/: auth.ts  canvasApi.ts  contract.ts  voiceSocket.ts
client/src/pages/: Dashboard.tsx  ForgotPassword.tsx  Home.tsx  Login.tsx  Session.tsx  SignUp.tsx
client/src/store/: canvasStore.ts
server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
server/app/: auth.py  config.py  main.py
server/app/api/: canvas.py  health.py  router.py  slack.py  voice.py
server/app/export/: mermaid.py
server/app/llm/: client.py  prompts.py  provider.py  service.py  summary.py
server/app/model/: base.py  canvas.py  session.py
server/app/repository/: canvas.py  session.py
server/app/schema/: canvas.py  summary.py  voice.py
server/app/search/: tavily.py
server/app/service/: canvas.py  ghost.py  search_trigger.py  session.py  stt.py  voice.py
server/app/slack/: client.py  summary_post.py  verify.py
(+1 files in other folders)
