[project]
name = "vorlage"
version = "0.1.0"
description = "VORLAGE backend: voice → DeepSeek → architecture canvas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
    "websockets>=16.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.10.1",
]
